--- a/server/.env.example
+++ b/server/.env.example
@@ -12,6 +12,14 @@ TWILIO_SID_TEST=def456
 TWILIO_TOKEN=abc123
 TWILIO_TOKEN_TEST=def456
 
+# Number of ms after the initial message to send the reminder message
+REMINDER_TIMEOUT_MS=1000
+REMINDER_TIMEOUT_MS_TEST=300000
+
+# Number of ms after the initial message to send the fallback message
+FALLBACK_TIMEOUT_MS=2000
+FALLBACK_TIMEOUT_MS_TEST=420000
+
 # Fallback "from" phone number
 TWILIO_FALLBACK_FROM_NUMBER=+1888phonenumber
 TWILIO_FALLBACK_FROM_NUMBER_TEST=+15005550006
